Bug 1355439 - Use NS_OBJC_BEGIN_TRY_ABORT_BLOCK to avoid crashes. r=jorgk